<resources>
    <string name="app_name">Final</string>

    <string name="MARSrover_name" translatable="false">Rover Name: \u0020</string>
    <string name="MARSstatus" translatable="false">Status: \u0020</string>
    <string name="MARSlaunch_date" translatable="false">Launch Date: \u0020</string>
    <string name="MARSlanding_date" translatable="false">Landing Date: \u0020</string>
    <string name="MARSmax_sol" translatable="false">Max sol: \u0020</string>
    <string name="MARSmartin_sol" translatable="false">Martian sol: \u0020</string>
    <string name="MARSmax_earth_date" translatable="false">Max Earth Date: \u0020</string>
    <string name="MARStotal_photos" translatable="false">Total Photos: \u0020</string>
    <string name="MARSearth_date" translatable="false">Earth Date: \u0020</string>
    <string name="MARSphoto_id" translatable="false">Photo Id: \u0020</string>
    <string name="MARScamera" translatable="false">Camera: \u0020</string>

    <string name="latitude_label"> Latitude:</string>
    <string name="longitude_label">Longitude</string>
    <string name="date_label">Select Date:</string>
    <string name="loading_error">Unable to extract the image. Please check your internet connection and try again. </string>

    <string name="title_activity_mars_date">MARSDate</string>

    <string name="back_button_txt">Back</string>
    <string name="button4_loading_error">Unable to fetch %1$s.\n\nError message: %2$s</string>
    <string name="button4Name">Asteroids Near You</string>
    <string name="button4_action_settings_title">Settings</string>

    <string name="asteroid_date_label">Closest To Earth:</string>
    <string name="asteroid_diameter_label">Estimated Diameter: </string>
    <string name="asteroid_distance_label">Miss Distance: </string>
    <string name="asteroid_velocity_label">Relative Distance:</string>
    <string name="asteroid_hazard_label">Collision Hazard:</string>

    <string name="asteroid_diameter_str">%1$d - %2$d %3$s</string>
    <string name="asteroid_distance_str">%1$d kilometers</string>
    <string name="asteroid_velocity_str">%1$d kilometers/hour</string>

    <!-- Strings for asteroid units preference -->
    <string name="pref_diameter_units_title" translatable="false">Diameter Units</string>
    <string name="pref_diameter_units_key" translatable="false">pref_diameter_units</string>
    <string name="pref_diameter_unit_default">meters</string>

<!--    <string name="pref_velocity_units_key" translatable="false">pref_velocity_units</string>-->
<!--    -->
<!--    <string name="pref_distance_units_key" translatable="false">pref_distance_units</string>-->
</resources>