<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/roverPhoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="Photo"
        android:src="@drawable/mars" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/roverPhotoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/MARSphoto_id"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/roverEarthDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/roverCameraName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/MARSearth_date"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/roverPhotoSol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/roverEarthDay"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/MARSmartin_sol"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/roverCameraName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/roverPhotoId"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/MARScamera"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </RelativeLayout>

</LinearLayout>