<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <LinearLayout
            android:id="@+id/ll_asteroid_labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="parent">

<!--            <TextView-->
<!--                android:id="@+id/tv_date_label"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textAppearance="?attr/textAppearanceBody1"-->
<!--                android:text="@string/asteroid_date_label"-->
<!--                />-->
            <TextView
                android:id="@+id/tv_diameter_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                android:text="@string/asteroid_diameter_label"
                />
            <TextView
                android:id="@+id/tv_distance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                android:text="@string/asteroid_distance_label"
                />
            <TextView
                android:id="@+id/tv_velocity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                android:text="@string/asteroid_velocity_label"
                />
            <TextView
                android:id="@+id/tv_hazard_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                android:text="@string/asteroid_hazard_label"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_asteroid_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintEnd_toEndOf="parent">

            <!--            <TextView-->
            <!--                android:id="@+id/tv_date"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:textAppearance="?attr/textAppearanceBody1"-->
            <!--                android:text="@string/asteroid_date_label"-->
            <!--                />-->
            <TextView
                android:id="@+id/tv_diameter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                android:text="@string/asteroid_diameter_label"
                />
            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                />
            <TextView
                android:id="@+id/tv_velocity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                />
            <TextView
                android:id="@+id/tv_hazard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>